--- a/PythonWorkspace/EMSv0_2.ipynb
+++ b/PythonWorkspace/EMSv0_2.ipynb
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 16,
       "metadata": {
         "id": "MXzZxVUQFroQ"
       },
@@ -80,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "Hu74obFw8Gts",
         "colab": {
@@ -122,7 +122,7 @@
         "id": "-IBm2Ge7rrfe",
         "outputId": "158b482c-efb4-49c9-ea61-5e4de23d070a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,7 +157,7 @@
         "id": "OYtyqOTcscTG",
         "outputId": "30000277-59a1-4386-fd5b-d84bd26733f3"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,13 +176,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nI52iVVCCPaf",
-        "outputId": "f8731e15-224f-4816-dda3-1eac509cc6cd"
+        "outputId": "cf2dd131-1c33-40d4-84f3-680fec240258"
       },
       "outputs": [
         {
@@ -226,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "0X9RBdXC_2PD",
         "colab": {
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "s2iW-k26FIbm"
       },
@@ -533,7 +533,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -610,14 +610,59 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
-        "id": "kqy-glMavKA6"
+        "id": "kqy-glMavKA6",
+        "outputId": "8d0524aa-e74e-4352-b808-c02c3903a7f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 891
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "The tensorboard extension is already loaded. To reload it, use:\n",
+            "  %reload_ext tensorboard\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Reusing TensorBoard on port 6006 (pid 1442), started 0:15:33 ago. (Use '!kill 1442' to kill it.)"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "        (async () => {\n",
+              "            const url = new URL(await google.colab.kernel.proxyPort(6006, {'cache': true}));\n",
+              "            url.searchParams.set('tensorboardColab', 'true');\n",
+              "            const iframe = document.createElement('iframe');\n",
+              "            iframe.src = url;\n",
+              "            iframe.setAttribute('width', '100%');\n",
+              "            iframe.setAttribute('height', '800');\n",
+              "            iframe.setAttribute('frameborder', 0);\n",
+              "            document.body.appendChild(iframe);\n",
+              "        })();\n",
+              "    "
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
-        "#create a new environment to train the model in.\n",
-        "train_env = EMSv0_2(episode_len = 6000, actual_load = actual_load, actual_gen = actual_gen, bat_threshold = 100, bat_cap = 500, purchase_price = purchase_price)\n",
         "\n",
         "#mount the drive\n",
         "drive.mount('/content/drive')\n",
@@ -633,6 +678,8 @@
         "if not os.path.exists(log_dir):\n",
         "    os.makedirs(log_dir)\n",
         "\n",
+        "%load_ext tensorboard\n",
+        "%tensorboard --logdir \"{log_dir}\"\n",
         "\n"
       ]
     },
@@ -653,6 +700,8 @@
       },
       "outputs": [],
       "source": [
+        "#create a new environment to train the model in.\n",
+        "train_env = EMSv0_2(episode_len = 6000, actual_load = actual_load, actual_gen = actual_gen, bat_threshold = 100, bat_cap = 500, purchase_price = purchase_price)\n",
         "\n",
         "#Create the model with the MultiInputPolicy, use the training env, verbose is off because tensorboard loging is enabled\n",
         "model = PPO(\"MultiInputPolicy\",train_env, verbose = 0, tensorboard_log = log_dir)\n",
@@ -665,13 +714,22 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Fp2X-8hBtYmh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "g5dU9TLFzhxD"
       },
       "outputs": [],
       "source": [
-        "%tensorboard --logdir \"{log_dir}\"\n",
+        "\n",
         "\n",
         "\n",
         "while True:\n",
@@ -758,7 +816,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN5iLsG3uRRivyZ7qe07uoF",
+      "authorship_tag": "ABX9TyNf4IemNQKkOWALeZHj7Q4l",
       "include_colab_link": true
     },
     "kernelspec": {
