Trained and tested PPO num_preds=24

--- a/PythonWorkspace/EMSv0_2.ipynb
+++ b/PythonWorkspace/EMSv0_2.ipynb
@@ -176,11 +176,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 23,
       "metadata": {
-        "id": "nI52iVVCCPaf"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nI52iVVCCPaf",
+        "outputId": "5ee80e81-8f4e-40d8-d4fc-f5ec4b2744dc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+            "  and should_run_async(code)\n"
+          ]
+        }
+      ],
       "source": [
         "#import needed libarys\n",
         "import gymnasium as gym\n",
@@ -189,6 +202,7 @@
         "from gymnasium import spaces\n",
         "import datetime\n",
         "from stable_baselines3 import PPO, A2C, DQN\n",
+        "from stable_baselines3.common.evaluation import evaluate_policy\n",
         "from google.colab import drive\n",
         "import os"
       ]
@@ -207,10 +221,10 @@
       "execution_count": 11,
       "metadata": {
         "id": "s2iW-k26FIbm",
-        "outputId": "cec45746-ee35-439e-eaec-ca5e7eb85514",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cec45746-ee35-439e-eaec-ca5e7eb85514"
       },
       "outputs": [
         {
@@ -467,10 +481,10 @@
       "execution_count": 12,
       "metadata": {
         "id": "v4GSJ8LsidPq",
-        "outputId": "928a5323-22d3-429b-e61f-0437205178f0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "928a5323-22d3-429b-e61f-0437205178f0"
       },
       "outputs": [
         {
@@ -610,10 +624,10 @@
       ],
       "metadata": {
         "id": "BztNxs9w0nRz",
-        "outputId": "d41cf7dd-2869-4bfe-c1b1-239333d8f8db",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d41cf7dd-2869-4bfe-c1b1-239333d8f8db"
       },
       "execution_count": 14,
       "outputs": [
@@ -689,7 +703,7 @@
         "#model = PPO(\"MultiInputPolicy\",train_env, verbose = 0, tensorboard_log = log_dir)\n",
         "\n",
         "#Load model, fetch the latest (or whichever one you want from the model_dir)\n",
-        "#PPO latest: /content/drive/MyDrive/Colab Notebooks/EMSv0_2/models/PPO/EMSv0_2_PPO20231005-070537.zip\n",
+        "#PPO latest: /content/drive/MyDrive/Colab Notebooks/EMSv0_2/models/PPO/EMSv0_2_PPO20231005-083718.zip\n",
         "model_load = f\"{model_dir}/EMSv0_2_PPO20231005-070537.zip\"\n",
         "model  = PPO.load(model_load, env = train_env)\n",
         "\n"
@@ -732,11 +746,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "inDHszZaxBUS"
+        "id": "inDHszZaxBUS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c63a1ad3-0258-4a9c-fd0d-32edfeeba198"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+            "  and should_run_async(code)\n",
+            "/usr/local/lib/python3.10/dist-packages/stable_baselines3/common/evaluation.py:67: UserWarning: Evaluation environment is not wrapped with a ``Monitor`` wrapper. This may result in reporting modified episode lengths and rewards, if other wrappers happen to modify these. Consider wrapping environment first with ``Monitor`` wrapper.\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Note: The term does not refer to the cost in rands but rather to the reward as defined by the reward function!\n",
+            "Done the Standby Test! Total cost accumulated is: -308596.6616592407\n",
+            "Done applying the trained model! Total cost accumulated is: -295807.0799106598 +- 2118.4823226584476\n",
+            "The amount that was saved by applying the EMS agent: 12789.58174858091\n",
+            "This was saved over a period of 115.0 days\n",
+            "The savings represents 4.144432956537764 % of the cost if no EMS is installed\n",
+            "And it represents 4.323622596336653 % of the cost if the EMS is installed\n"
+          ]
+        }
+      ],
       "source": [
         "#define a test environment\n",
         "test_env = EMSv0_2(episode_len = 2760, actual_load = actual_load[6001:], actual_gen = actual_gen[6001:], bat_threshold = 100, bat_cap = 500, purchase_price = purchase_price[6001:],num_preds = 24)\n",
@@ -744,14 +786,14 @@
         "\n",
         "#Load model, fetch the latest (or whichever one you want from the model_dir)\n",
         "#Best A2C model:\n",
-        "#Best PPO model:\n",
+        "best_PPO_model = \"EMSv0_2_PPO20231005-083718.zip\"\n",
         "\n",
         "model_type = \"PPO\"\n",
         "version    = \"EMSv0_2\"\n",
         "model_dir = f\"/content/drive/MyDrive/Colab Notebooks/{version}/models/{model_type}/\"\n",
         "log_dir   = f\"/content/drive/MyDrive/Colab Notebooks/{version}/models/{model_type}logs/\"\n",
         "\n",
-        "model_load = f\"{model_dir}/\"\n",
+        "model_load = f\"{model_dir}/{best_PPO_model}\"\n",
         "model  = PPO.load(model_load, env = test_env)\n",
         "\n",
         "\n",
@@ -769,7 +811,7 @@
         "    #accumulate the score\n",
         "    standby_score += reward\n",
         "\n",
-        "EMS_reward,EMS_std_reward = evaluate_policy(model,test_env,n_eval_episodes = 100)\n",
+        "EMS_reward,EMS_std_reward = evaluate_policy(model,test_env,n_eval_episodes = 100,deterministic=False)\n",
         "\n",
         "\n",
         "print(f\"Note: The term does not refer to the cost in rands but rather to the reward as defined by the reward function!\")\n",
@@ -788,7 +830,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPvTQ9Wc1juZCCMjfx7rXwX",
+      "authorship_tag": "ABX9TyO1G56qSxqcI9cmPzU7nCa5",
       "include_colab_link": true
     },
     "kernelspec": {
