Final Save before next version

--- a/PythonWorkspace/EMSv0_2.ipynb
+++ b/PythonWorkspace/EMSv0_2.ipynb
@@ -19,13 +19,17 @@
         "**Added:**\n",
         "*  simplified load_forecast and gen_forecast to be power_bal_forecasts.\n",
         "*  combined current_load and current_gen to also show current_power_balance\n",
+        "*  added proper evaluate call\n",
+        "*  Monitor wrapper\n",
+        "*  DummyVec wrapper\n",
         "\n",
         "**Parameters:**\n",
-        "*  set num_preds = 3. Again to simplify observation space.\n",
+        "*\n",
         "*  \n",
         "\n",
         "**Results:**\n",
-        "*\n",
+        "* 5% savings on PPO deterministic = true\n",
+        "* 4.3% savings on PPO determnistic = false\n",
         "\n",
         "**To do:**\n",
         "* Try to use hyperparameter Optimisation\n",
@@ -203,6 +207,8 @@
         "import datetime\n",
         "from stable_baselines3 import PPO, A2C, DQN\n",
         "from stable_baselines3.common.evaluation import evaluate_policy\n",
+        "from stable_baselines3.common.monitor import Monitor\n",
+        "from stable_baselines3.common.vec_env import DummyVecEnv, VecVideoRecorder\n",
         "from google.colab import drive\n",
         "import os"
       ]
@@ -699,6 +705,8 @@
         "#create a new environment to train the model in.\n",
         "train_env = EMSv0_2(episode_len = 6000, actual_load = actual_load, actual_gen = actual_gen, bat_threshold = 100, bat_cap = 500, purchase_price = purchase_price,num_preds = 24)\n",
         "\n",
+        "train_env = Monitor(train_env)\n",
+        "train_env = DummyVecEnv(train_env)\n",
         "#Create the model with the MultiInputPolicy, use the training env, verbose is off because tensorboard loging is enabled\n",
         "#model = PPO(\"MultiInputPolicy\",train_env, verbose = 0, tensorboard_log = log_dir)\n",
         "\n",
@@ -830,7 +838,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO1G56qSxqcI9cmPzU7nCa5",
+      "authorship_tag": "ABX9TyPLtoaDaZSAlQ46zYesQEJN",
       "include_colab_link": true
     },
     "kernelspec": {
