--- a/PythonWorkspace/EMSv0_3.ipynb
+++ b/PythonWorkspace/EMSv0_3.ipynb
@@ -21,6 +21,7 @@
         "* New reward structure\n",
         "* added Vec_env\n",
         "* added eval callbacks to validate training\n",
+        "* added in logging\n",
         "\n",
         "**Parameters:**\n",
         "* Added in loadshedding forecast\n",
@@ -852,7 +853,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyP3erzBzQW86Dpbhqy4HU2r",
+      "authorship_tag": "ABX9TyOxE74PuAl97jdyNqc1fPWz",
       "include_colab_link": true
     },
     "kernelspec": {
