adding logging values

--- a/PythonWorkspace/EMSv0_3.ipynb
+++ b/PythonWorkspace/EMSv0_3.ipynb
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -185,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": null,
       "metadata": {
         "id": "s2iW-k26FIbm",
         "colab": {
@@ -304,7 +304,7 @@
         "        self.terminated = False\n",
         "        #Check if timelimit reached\n",
         "        self.truncated = False if self.current_step<self.final_step else True\n",
-        "        #Wand log\n",
+        "        #Wand log, if its set to true(so that it only gets run when wandb is initialised)\n",
         "        if self.wandb_log = True:\n",
         "            self.wandb_log()\n",
         "        #dont know what to put into info for now\n",
@@ -332,9 +332,7 @@
         "        info = {}\n",
         "        return observation, info\n",
         "\n",
-        "    def wandb_log(self)\n",
-        "        wandb.log({\"battery_level\": self.battery_level})\n",
-        "        #log shit here\n",
+        "\n",
         "\n",
         "    def render(self, mode='rgb_array', save_path=None):\n",
         "\n",
@@ -348,6 +346,22 @@
         "        self.frames.append(plt.gcf().canvas.tostring_rgb())\n",
         "        plt.pause(0.000001)\n",
         "\n",
+        "    def wandb_log(self)\n",
+        "        wandb.log({\"battery_level\": self.battery_level})\n",
+        "        wandb.log({\"load\": self.actual_load[self.current_step]})\n",
+        "        wandb.log({\"generation\": self.actual_gen[self.current_step]})\n",
+        "        wandb.log({\"Excess Generation\" : self.excess_gen})\n",
+        "        wandb.log({\"Unmet Load\":self.unmet_load_total})\n",
+        "        wandb.log({\"LoadShedding\":self.load_shed[self.current_step]})\n",
+        "\n",
+        "        plt.clf()\n",
+        "        values = [self.off_peak_purchases, self.standard_purchases, self.purchase_price[self.peak_purchases]]\n",
+        "        colors = ['green', 'orange','red']\n",
+        "        labels = ['Off Peak', 'Standard', 'Peak']\n",
+        "        plt.xlim(0,1.6)\n",
+        "        plt.ylim(0,100)\n",
+        "        plt.bar(list(range(3)),values, color=colors, tick_label=labels)\n",
+        "        wandb.log({\"Num Purchases per Tariff rate\": plt})\n",
         "\n",
         "    def close(self):\n",
         "        #don't think i need this for my application\n",
@@ -363,7 +377,7 @@
         "            raise ValueError(\n",
         "                f\"Received invalid action = {action} which is not part of the action space.\"\n",
         "            )\n",
-        "        #case list for each action?\n",
+        "        self.unmet_load_total += self.unmet_load\n",
         "\n",
         "    def calc_reward(self):\n",
         "        #Calculate reward based on the state\n",
@@ -547,7 +561,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": null,
       "metadata": {
         "id": "0X9RBdXC_2PD",
         "colab": {
@@ -708,7 +722,8 @@
         "            callback = wandb_callback\n",
         "            )\n",
         "\n",
-        "model.save(f\"{model_dir}{version}_{model_type}\"+datetime.datetime.now().strftime(\"%m%d-%H%M%S\"))\n"
+        "model.save(f\"{model_dir}{version}_{model_type}\"+datetime.datetime.now().strftime(\"%m%d-%H%M%S\"))\n",
+        "run.finish()\n"
       ]
     },
     {
@@ -722,7 +737,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": null,
       "metadata": {
         "id": "inDHszZaxBUS",
         "colab": {
@@ -836,7 +851,7 @@
         "\n",
         "EMS_reward,EMS_std_reward = evaluate_policy(model,eval_env,n_eval_episodes = 20,deterministic=True)# callback = wandb_callback\n",
         "\n",
-        "run.finish()\n",
+        "c\n",
         "print(f\"Note: The term does not refer to the cost in rands but rather to the reward as defined by the reward function!\")\n",
         "print(f\"Done the Standby Test! Total cost accumulated is: {avg_standby_score}\")\n",
         "print(f\"Done applying the trained model! Total cost accumulated is: {EMS_reward} +- {EMS_std_reward}\")\n",
@@ -853,7 +868,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOxE74PuAl97jdyNqc1fPWz",
+      "authorship_tag": "ABX9TyNCQnyMMfcoQWg7k5n0rwP/",
       "include_colab_link": true
     },
     "kernelspec": {
