Starting to add Hybrid component

--- a/PythonWorkspace/EMSv1_0.ipynb
+++ b/PythonWorkspace/EMSv1_0.ipynb
@@ -15,6 +15,13 @@
       "source": [
         "## **Version Notes**\n",
         "\n",
+        "# ***v1.0\n",
+        "\n",
+        "**Added:**\n",
+        "* AC and DC load\n",
+        "* Wind Gen\n",
+        "\n",
+        "\n",
         "# **v0.3**\n",
         "**Added:**\n",
         "* loadshedding\n",
@@ -101,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "nI52iVVCCPaf"
       },
@@ -172,30 +179,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
-        "id": "s2iW-k26FIbm",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "8722dd02-9741-4226-c9a0-a133e6347ff5"
+        "id": "s2iW-k26FIbm"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/gymnasium/envs/registration.py:694: UserWarning: \u001b[33mWARN: Overriding environment EMSv0_3 already in registry.\u001b[0m\n",
-            "  logger.warn(f\"Overriding environment {new_spec.id} already in registry.\")\n",
-            "/usr/local/lib/python3.10/dist-packages/stable_baselines3/common/env_checker.py:244: UserWarning: Your observation island_forecast has an unconventional shape (neither an image, nor a 1D vector). We recommend you to flatten the observation to have only a 1D vector or use a custom policy to properly process the data.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.10/dist-packages/stable_baselines3/common/env_checker.py:244: UserWarning: Your observation power_bal_forecast has an unconventional shape (neither an image, nor a 1D vector). We recommend you to flatten the observation to have only a 1D vector or use a custom policy to properly process the data.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.10/dist-packages/stable_baselines3/common/env_checker.py:244: UserWarning: Your observation price_forecast has an unconventional shape (neither an image, nor a 1D vector). We recommend you to flatten the observation to have only a 1D vector or use a custom policy to properly process the data.\n",
-            "  warnings.warn(\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "class EMSv0_3(gym.Env):\n",
         "    \"\"\"Custom Environment that follows gym interface.\"\"\"\n",
@@ -219,13 +207,13 @@
         "        if isinstance(actual_load,str) :\n",
         "            self.actual_load = np.random.rand(self.final_step+num_preds+1).astype(np.float32) #will load from a file or something\n",
         "        else:\n",
-        "            self.actual_load = actual_load[:episode_len]\n",
+        "           self.actual_load  = actual_load[:episode_len,:]\n",
         "\n",
         "        #fill all of the actual generation steps.\n",
         "        if isinstance(actual_gen,str):\n",
-        "            self.actual_gen  = np.random.rand(self.final_step+num_preds+1).astype(np.float32) #will load from file or something\n",
+        "            self.actual_gen  = np.random.rand(self.final_step+num_preds+1,2).astype(np.float32) #will load from file or something\n",
         "        else:\n",
-        "            self.actual_gen  = actual_gen[:episode_len]\n",
+        "            self.actual_gen  = actual_gen[:episode_len,:]\n",
         "\n",
         "        #Fill the loadShedding indicator\n",
         "        if isinstance(load_shedding,str):\n",
@@ -269,14 +257,17 @@
         "        n_actions = 2 # keeping it simple\n",
         "\n",
         "        self.num_preds = num_preds # day ahead predictions\n",
+        "        #define how many different loads and generators there are\n",
+        "        self.num_loads = self.actual_load.shape[1]\n",
+        "        #define the size of the action space\n",
         "        self.action_space = spaces.Discrete(n_actions)\n",
         "        # Dict space to store all the different things\n",
         "        self.observation_space = spaces.Dict({\n",
-        "                \"power_bal_forecast\": gym.spaces.Box(low=-np.inf, high=np.inf, shape=(1,num_preds), dtype=np.float32),\n",
+        "                \"power_bal_forecast\": gym.spaces.Box(low=-np.inf, high=np.inf, shape=(self.num_loads,num_preds), dtype=np.float32),\n",
         "                \"price_forecast\": gym.spaces.Box(low=0, high=np.inf, shape=(1,num_preds+1), dtype=np.float32),\n",
         "                \"island_forecast\": gym.spaces.Box(low=0, high=1, shape=(1,num_preds+1), dtype=np.float32),\n",
         "                \"bat_level\": gym.spaces.Box(low=0, high=np.inf, shape=(1,), dtype=np.float32),\n",
-        "                \"current_power_bal\": gym.spaces.Box(low=-np.inf, high=np.inf, shape=(1,), dtype=np.float32),\n",
+        "                \"current_power_bal\": gym.spaces.Box(low=-np.inf, high=np.inf, shape=(self.num_loads,), dtype=np.float32),\n",
         "                })\n",
         "\n",
         "    def step(self, action):\n",
@@ -361,8 +352,10 @@
         "                  }\n",
         "        eval_log_dict={\n",
         "                    \"battery_level\"     :self.battery_level,\n",
-        "                    \"load\"              :self.actual_load[self.current_step],\n",
-        "                    \"generation\"        :self.actual_gen[self.current_step],\n",
+        "                    \"AC load\"           :self.actual_load[self.current_step,0],\n",
+        "                    \"DC load\"           :self.actual_load[self.current_step,1],\n",
+        "                    \"PV generation\"     :self.actual_gen[self.current_step,0],\n",
+        "                    \"Wind generation\"   :self.actual_gen[self.current_step,1],\n",
         "                    \"Excess Generation\" :self.excess_gen,\n",
         "                    \"Unmet Load\"        :self.unmet_load_total,\n",
         "                    \"LoadShedding\"      :self.load_shed[self.current_step],\n",
@@ -421,12 +414,12 @@
         "        #Fill the observation space with the next observation\n",
         "\n",
         "        #Get Forecasts Will probaly write a function for this? idk maybe a schlep to return all the info\n",
-        "        load_forecast  = np.array( [self.actual_load[self.current_step+1: self.current_step + self.num_preds+1]] , dtype = np.float32) #will load from a file or something\n",
-        "        if load_forecast.shape != (1,self.num_preds):\n",
-        "            print(f\"load_forecast shape is {load_forecast.shape} but it should be {(1, self.num_preds)}. Current step is {self.current_step}\")\n",
-        "        gen_forecast   = np.array( [self.actual_gen[self.current_step+1: self.current_step + self.num_preds+1]] , dtype = np.float32) #will load from a file or something\n",
-        "        if gen_forecast.shape != (1,self.num_preds):\n",
-        "            print(f\"gen_forecast shape is {gen_forecast.shape} but it should be {(1, self.num_preds)}. Current step is {self.current_step}\")\n",
+        "        load_forecast  = np.array( [self.actual_load[self.current_step+1: self.current_step + self.num_preds+1,:]] , dtype = np.float32) #will load from a file or something\n",
+        "        if load_forecast.shape != (self.num_loads,self.num_preds):\n",
+        "            print(f\"load_forecast shape is {load_forecast.shape} but it should be {(self.num_loads, self.num_preds)}. Current step is {self.current_step}\")\n",
+        "        gen_forecast   = np.array( [self.actual_gen[self.current_step+1: self.current_step + self.num_preds+1,:]] , dtype = np.float32) #will load from a file or something\n",
+        "        if gen_forecast.shape != (self.num_loads,self.num_preds):\n",
+        "            print(f\"gen_forecast shape is {gen_forecast.shape} but it should be {(self.num_loads, self.num_preds)}. Current step is {self.current_step}\")\n",
         "        #calculate the power forecast\n",
         "        power_bal_forecast = gen_forecast-load_forecast\n",
         "        #get the prices for the current frame and the next 24 hours. Maybe will cut this down since that seems like a lot of info\n",
@@ -437,8 +430,8 @@
         "        island_forecast =np.array( [self.load_shed[self.current_step:self.current_step+self.num_preds+1]] , dtype = np.float32)\n",
         "\n",
         "        #calculate the current power balance\n",
-        "        current_load   = np.array([self.actual_load[self.current_step]], dtype = np.float32)\n",
-        "        current_gen    = np.array([self.actual_gen[self.current_step]], dtype  = np.float32)\n",
+        "        current_load   = np.array([self.actual_load[self.current_step,:]], dtype = np.float32)\n",
+        "        current_gen    = np.array([self.actual_gen[self.current_step,:]], dtype  = np.float32)\n",
         "        current_power_bal = current_gen - current_load\n",
         "\n",
         "\n",
@@ -458,15 +451,18 @@
         "        #if there is excess generation it is used to charge the batteries\n",
         "\n",
         "        #define step_gen and step_load for readability\n",
-        "        step_gen  =  self.actual_gen[self.current_step]\n",
-        "        step_load =  self.actual_load[self.current_step]\n",
+        "        step_gen  =  self.actual_gen[self.current_step,:]\n",
+        "        step_load =  self.actual_load[self.current_step,:]\n",
         "        battery   =  self.battery_level\n",
         "        islanded  =  self.load_shed[self.current_step]\n",
         "        #reset purchased and unmet load amount\n",
         "        self.step_purchased = 0\n",
         "        #should have had step indicated in the name.\n",
-        "        self.unmet_load     = 0\n",
+        "        self.unmet_load     = [0,0]\n",
         "\n",
+        "    def calc_standby(self,step_load,step_gen,step_excess,b):\n",
+        "        battery   =  self.battery_level\n",
+        "        islanded  =  self.load_shed[self.current_step]\n",
         "        #check for gen meeting load\n",
         "        if step_load <= step_gen :\n",
         "            #Purchased electricity stays at 0 since there is sufficient generation.\n",
@@ -760,7 +756,7 @@
         "id": "o3qJfzD9pLT_",
         "outputId": "1900c91d-e1c0-4f12-a711-408df19e110b"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,7 +779,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "inDHszZaxBUS",
         "colab": {
@@ -904,7 +900,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOD/UfN56h0lM0F+zTZeaHP",
+      "authorship_tag": "ABX9TyNUMvGhD9YKgP3l1zx2KHRp",
       "include_colab_link": true
     },
     "kernelspec": {
